--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>norbert-wiener-hub</title>
+    <title>norbert-wiener</title>
     <meta name="description" content="SCE-INS" />
     <meta name="author" content="SCE-INS" />
   </head>
